Removed repetion of keywords in the package.json file

--- a/package.json
+++ b/package.json
@@ -15,13 +15,7 @@
     "Node",
     "App",
     "Mahili",
-    "Node",
-    "App",
-    "Liri",
-    "App",
-    "Mahili",
-    "Liri",
-    "App"
+    "Liri"
   ],
   "author": "Baraka Georges Mahili",
   "license": "MIT",
