Installed the Twitter, Request, Spotify and Dotenv packages

--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/gbmahili/Liri-Node-App/issues"
   },
-  "homepage": "https://github.com/gbmahili/Liri-Node-App#readme"
+  "homepage": "https://github.com/gbmahili/Liri-Node-App#readme",
+  "dependencies": {
+    "dotenv": "^4.0.0",
+    "node-spotify-api": "^1.0.7",
+    "request": "^2.83.0",
+    "twitter": "^1.7.1"
+  }
 }
